<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:text="@string/weather_update"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </View>

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/enter_city_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/enter_country_code_optional"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGet"
            android:layout_marginBottom="10dp"
            android:background="#0070c7"
            android:textColor="@android:color/white"
            android:onClick="getWeatherDetails"
            android:text="@string/get"
            app:backgroundTint="@null"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvResult" />
        </ScrollView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </View>
        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_adunit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</LinearLayout>